@@ -1,3 +1,8 @@
+2005-08-30  Brian Cameron <Brian.Cameron@sun.com>
+
+	* gui/modules/keymouselistener.c, gui/modules/dwellmouselistener.c:
+	  Fixed syslog debugging so it works better.
+
 2005-08-20  Dennis Cranston  <dennis_cranston@yahoo.com>
 
 	* gui/gdmXnestchooser.c: (main):
